gac_sb/objects/INNOmission__c.object
<CustomObject>
    <fields>
        <fullName>Annee_CIR__c</fullName>
        <label>Année CIR</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditeurs_financiers__c</fullName>
        <label>Auditeurs financiers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avancement_Audit__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Audit__c == 0, 0, Nombre_jours_travailles_Audit__c / Nombre_jours_theoriques_Audit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement - Audit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avancement_Controle__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Controle__c == 0, 0, Nombre_jours_travailles_Controle__c / Nombre_jours_theoriques_Controle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement - Contrôle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avancement_Justification__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Justification__c == 0, 0, Nombre_jours_travailles_Justification__c / Nombre_jours_theoriques_Justification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement - Justif</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avancement_Valorisation__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Valorisation__c == 0, 0, Nombre_jours_travailles_Valorisation__c / Nombre_jours_theoriques_Valorisation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement - Valo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avancement__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Total__c == 0, 0, Nombre_jours_travailles_total__c / Nombre_jours_theoriques_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChiffreAffaire__c</fullName>
        <label>Chiffre d&apos;affaire</label>
        <summarizedField>INNOvalo__c.ChiffreAffaire__c</summarizedField>
        <summaryForeignKey>INNOvalo__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CleUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Clé unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Consultants_exterieurs__c</fullName>
        <label>Consultants exterieurs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultants_fiscalistes__c</fullName>
        <label>Consultants fiscalistes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultants_scientifiques__c</fullName>
        <label>Consultants scientifiques</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contrat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contrat</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>MissionsCIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cout_mission_Estime__c</fullName>
        <formula>IF(ISBLANK(Cout_standard_INNO_advance__c), 
null, 
(Nombre_jours_programmes_Consultant__c + Nombre_jours_travailles_Consultant__c) * Cout_standard_INNO_advance__r.Cout_standard_Consultant__c + 
(Nombre_jours_programmes_Redacteur_RO__c + Nombre_jours_travailles_Redacteur_RO__c) * Cout_standard_INNO_advance__r.Cout_standard_Redacteur_RO__c + 
(Nombre_jours_programmes_Superviseur__c + Nombre_jours_travailles_Superviseur__c) * Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c + 
(Nombre_jours_programmes_Manager__c + Nombre_jours_travailles_Manager__c) * Cout_standard_INNO_advance__r.Cout_standard_Manager__c +
(Nombre_jours_programmes_Redacteur__c + Nombre_jours_travailles_Redacteur__c) * Cout_standard_INNO_advance__r.Cout_Standard_Redacteur__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût de la mission (Estimé)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_mission_Reelle__c</fullName>
        <formula>IF(ISBLANK(Cout_standard_INNO_advance__c), 
null, 
Nombre_jours_travailles_Consultant__c * Cout_standard_INNO_advance__r.Cout_standard_Consultant__c + 
Nombre_jours_travailles_Redacteur_RO__c * Cout_standard_INNO_advance__r.Cout_standard_Redacteur_RO__c + 
Nombre_jours_travailles_Superviseur__c * Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c + 
Nombre_jours_travailles_Manager__c * Cout_standard_INNO_advance__r.Cout_standard_Manager__c +
Nombre_jours_travailles_Redacteur__c * Cout_standard_INNO_advance__r.Cout_Standard_Redacteur__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût de la mission (Réelle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_mission_Theorique__c</fullName>
        <formula>IF(ISBLANK(Cout_standard_INNO_advance__c), 
null, 
Nombre_jours_theoriques_Consultant__c * Cout_standard_INNO_advance__r.Cout_standard_Consultant__c + 
Nombre_jours_theoriques_Redacteur_RO__c * Cout_standard_INNO_advance__r.Cout_standard_Redacteur_RO__c + 
Nombre_jours_theoriques_Superviseur__c * Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c + 
Nombre_jours_theoriques_Manager__c * Cout_standard_INNO_advance__r.Cout_standard_Manager__c +
Nombre_jours_theoriques_Redacteur__c * Cout_standard_INNO_advance__r.Cout_Standard_Redacteur__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût de la mission (Théorique)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_INNO_advance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Coût standard INNO advance</label>
        <referenceTo>INNOcoutStandard__c</referenceTo>
        <relationshipName>Missions_CIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateEnvoiValorisation__c</fullName>
        <label>Date d’envoi Valorisation</label>
        <summarizedField>INNOvalo__c.Date_envoi_valorisation__c</summarizedField>
        <summaryForeignKey>INNOvalo__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DateValidationPerimetreRecap__c</fullName>
        <label>Date Validation Périmètre</label>
        <summarizedField>INNOvalo__c.Date_validation_perimetre__c</summarizedField>
        <summaryForeignKey>INNOvalo__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Initiale_echeance_DT__c</fullName>
        <inlineHelpText>Date contractuelle ou fixée par le manager. Date figée</inlineHelpText>
        <label>Date Initiale échéance DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_Audit__c</fullName>
        <label>Date début Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_justification__c</fullName>
        <label>Date début justification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_valorisation__c</fullName>
        <label>Date début valorisation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_dernier_DT_rendu__c</fullName>
        <label>Date du dernier DT rendu</label>
        <summarizedField>INNOvalo__c.Date_rendu_DT__c</summarizedField>
        <summaryForeignKey>INNOvalo__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_fin_audit__c</fullName>
        <label>Date fin Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_fin_justification_recap__c</fullName>
        <inlineHelpText>Calculée automatiquement avec le MAX des Dates d&apos;échéance DT des valorisations associées</inlineHelpText>
        <label>Date fin justification</label>
        <summarizedField>INNOvalo__c.Date_echeance_DT__c</summarizedField>
        <summaryForeignKey>INNOvalo__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_fin_valorisation__c</fullName>
        <label>Date fin valorisation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_lancement_mission__c</fullName>
        <label>Date de lancement de mission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Groupe__c</fullName>
        <label>Groupe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADISSEO</fullName>
                </value>
                <value>
                    <fullName>AIR LIQUIDE</fullName>
                </value>
                <value>
                    <fullName>AKKA TECHNOLOGIES</fullName>
                </value>
                <value>
                    <fullName>AMADEUS</fullName>
                </value>
                <value>
                    <fullName>ANDRA</fullName>
                </value>
                <value>
                    <fullName>ATOS</fullName>
                </value>
                <value>
                    <fullName>BOUYGUES TELECOM</fullName>
                </value>
                <value>
                    <fullName>BOUYGUES TRAVAUX PUBLICS</fullName>
                </value>
                <value>
                    <fullName>CGG</fullName>
                </value>
                <value>
                    <fullName>CLIMESPACE</fullName>
                </value>
                <value>
                    <fullName>CREDIT AGRICOLE</fullName>
                </value>
                <value>
                    <fullName>DIAGNOSTICA STAGO</fullName>
                </value>
                <value>
                    <fullName>EDF</fullName>
                </value>
                <value>
                    <fullName>ELECTRICITE DE STRASBOURG</fullName>
                </value>
                <value>
                    <fullName>ENEDIS (ERDF)</fullName>
                </value>
                <value>
                    <fullName>ENGIE</fullName>
                </value>
                <value>
                    <fullName>IFF</fullName>
                </value>
                <value>
                    <fullName>INEO</fullName>
                </value>
                <value>
                    <fullName>LORD CORPORATION</fullName>
                </value>
                <value>
                    <fullName>LVMH</fullName>
                </value>
                <value>
                    <fullName>MAISADOUR</fullName>
                </value>
                <value>
                    <fullName>MARS CHOCOLAT FRANCE</fullName>
                </value>
                <value>
                    <fullName>MIKROS - IMAGE</fullName>
                </value>
                <value>
                    <fullName>NEXTER SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>OTIS</fullName>
                </value>
                <value>
                    <fullName>PIERRE FABRE SA</fullName>
                </value>
                <value>
                    <fullName>ROBERT BOSCH FRANCE</fullName>
                </value>
                <value>
                    <fullName>ROULLIER</fullName>
                </value>
                <value>
                    <fullName>SAFRAN</fullName>
                </value>
                <value>
                    <fullName>SAGEMCOM SAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INNOcontroleQualite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrôle Qualité 2</label>
        <referenceTo>INNOcontroleQualite__c</referenceTo>
        <relationshipName>Missions_CIR_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managers__c</fullName>
        <label>Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option1__c</fullName>
        <inlineHelpText>Somme des montants des valorisations associées à cette mission</inlineHelpText>
        <label>Montant du CIR définitif option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option2__c</fullName>
        <inlineHelpText>Somme des montants des valorisations associées à cette mission</inlineHelpText>
        <label>Montant du CIR définitif option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option3__c</fullName>
        <inlineHelpText>Somme des montants des valorisations associées à cette mission</inlineHelpText>
        <label>Montant du CIR définitif option 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_optionFinale__c</fullName>
        <inlineHelpText>Somme des montants des valorisations associées à cette mission</inlineHelpText>
        <label>Montant CIR définitif retenu(après dédu)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option1__c</fullName>
        <inlineHelpText>Somme des montants des valorisations associées à cette mission</inlineHelpText>
        <label>Montant total des dépenses option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option2__c</fullName>
        <inlineHelpText>Somme des montants des valorisations associées à cette mission</inlineHelpText>
        <label>Montant total des dépenses option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option3__c</fullName>
        <inlineHelpText>Somme des montants des valorisations associées à cette mission</inlineHelpText>
        <label>Montant total des dépenses option 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_optionFinale__c</fullName>
        <inlineHelpText>Somme des montants des valorisations associées à cette mission</inlineHelpText>
        <label>Montant total dép. retenu (avant dédu)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NombreCFenCours__c</fullName>
        <label>Nombre de CF en cours</label>
        <summaryFilterItems>
            <field>INNOvalo__c.Etat_CF__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOvalo__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Audit__c</fullName>
        <label>Nombre de jours programmés - Audit</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Audit__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Consultant__c</fullName>
        <label>Nombre de jours programmés - Consultant</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique, Consultant fiscaliste, Consultant extérieur, Auditeur Financier</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Controle__c</fullName>
        <label>Nombre de jours programmés - Contrôle</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Controle__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Justification__c</fullName>
        <label>Nombre de jours programmés - Justif</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Justification__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Manager__c</fullName>
        <label>Nombre de jours programmés - Manager</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Redacteur_RO__c</fullName>
        <label>Nombre de jours programmés- Rédacteur RO</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Rédacteur scientifique RO</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Redacteur__c</fullName>
        <label>Nombre de jours programmés - Rédacteur</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Rédacteur scientifique</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Superviseur__c</fullName>
        <label>Nombre de jours programmés - Superviseur</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Superviseur/Consultant, Superviseur</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Total__c</fullName>
        <formula>Nombre_jours_programmes_Audit__c + Nombre_jours_programmes_Valorisation__c + Nombre_jours_programmes_Justification__c + Nombre_jours_programmes_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours programmés - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Valorisation__c</fullName>
        <label>Nombre de jours programmés - Valo</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_programmes_Valorisation__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Audit__c</fullName>
        <label>Nombre de jours théoriques - Audit</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Audit__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Consultant__c</fullName>
        <label>Nombre de jours théoriques - Consultant</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique, Consultant fiscaliste, Consultant extérieur, Auditeur Financier</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Controle__c</fullName>
        <label>Nombre de jours théoriques - Contrôle</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Controle__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Justification__c</fullName>
        <label>Nombre de jours théoriques - Justif</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Justification__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Manager__c</fullName>
        <label>Nombre de jours théoriques - Manager</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Redacteur_RO__c</fullName>
        <label>Nombre de jours théoriques- Rédacteur RO</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Rédacteur scientifique RO</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Redacteur__c</fullName>
        <label>Nombre de jours théoriques - Rédacteur</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Rédacteur scientifique</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Superviseur__c</fullName>
        <label>Nombre de jours théoriques - Superviseur</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Superviseur/Consultant, Superviseur</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Total__c</fullName>
        <formula>Nombre_jours_theoriques_Audit__c + Nombre_jours_theoriques_Valorisation__c + Nombre_jours_theoriques_Justification__c + Nombre_jours_theoriques_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours théoriques - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Valorisation__c</fullName>
        <label>Nombre de jours théoriques - Valo</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_theoriques_Valorisation__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Audit__c</fullName>
        <label>Nombre de jours travaillés - Audit</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Audit__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Consultant__c</fullName>
        <label>Nombre de jours travaillés - Consultant</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique, Consultant fiscaliste, Consultant extérieur, Auditeur Financier</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Controle__c</fullName>
        <label>Nombre de jours travaillés - Contrôle</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Controle__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Justification__c</fullName>
        <label>Nombre de jours travaillés - Justif</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Justification__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Manager__c</fullName>
        <label>Nombre de jours travaillés - Manager</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Redacteur_RO__c</fullName>
        <label>Nombre de jours travaillés- Rédacteur RO</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Rédacteur scientifique RO</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Redacteur__c</fullName>
        <label>Nombre de jours travaillés - Rédacteur</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Rédacteur scientifique</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Superviseur__c</fullName>
        <label>Nombre de jours travaillés - Superviseur</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Total__c</summarizedField>
        <summaryFilterItems>
            <field>INNOequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Superviseur/Consultant, Superviseur</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Valorisation__c</fullName>
        <label>Nombre de jours travaillés - Valo</label>
        <summarizedField>INNOequipeConsulting__c.Nombre_jours_travailles_Valorisation__c</summarizedField>
        <summaryForeignKey>INNOequipeConsulting__c.MissionCIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_total__c</fullName>
        <formula>Nombre_jours_travailles_Audit__c + Nombre_jours_travailles_Valorisation__c +  Nombre_jours_travailles_Justification__c + Nombre_jours_travailles_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours travaillés - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactif / en attente de renouvellement</fullName>
                </value>
                <value>
                    <fullName>Inactif / en attente de lancement</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Valorisation</fullName>
                </value>
                <value>
                    <fullName>Justification</fullName>
                </value>
                <value>
                    <fullName>Terminée</fullName>
                </value>
                <value>
                    <fullName>Terminée - Dossier à 0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrestataireAvocat__c</fullName>
        <label>Prestataire Avocat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrestataireCAC__c</fullName>
        <label>Prestataire CAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrestataireEC__c</fullName>
        <label>Prestataire EC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redacteurs_scientifiques__c</fullName>
        <label>Rédacteurs scientifiques</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rentabilite_mission_Estimee__c</fullName>
        <formula>IF(ChiffreAffaire__c = 0,
null,
(ChiffreAffaire__c - Cout_mission_Estime__c) / ChiffreAffaire__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilité de la mission (Estimée)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilite_mission_Reelle__c</fullName>
        <formula>IF(ChiffreAffaire__c = 0,
null,
(ChiffreAffaire__c - Cout_mission_Reelle__c) / ChiffreAffaire__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilité de la mission (Réelle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>